# Opalite

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEVPOST.md  Dockerfile  PLAN.md  README.md  config.example.js  index.html  manifest.json
android/opalite-edge/: .gitignore  README.md  gradle.properties  settings.gradle
android/opalite-edge/app/: build.gradle  proguard-rules.pro
android/opalite-edge/app/libs/: README.md  librealsense.aar
android/opalite-edge/app/src/main/: AndroidManifest.xml
android/opalite-edge/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/opalite-edge/app/src/main/java/com/opalite/edge/: MainActivity.java
android/opalite-edge/app/src/main/res/color/: describe_button_text.xml
android/opalite-edge/app/src/main/res/drawable/: describe_button_bg.xml
android/opalite-edge/app/src/main/res/layout/: activity_main.xml
android/opalite-edge/app/src/main/res/values/: strings.xml
android/opalite-edge/app/src/main/res/xml/: device_filter.xml
css/: styles.css
docs/: Final_Project_Requirements.md  final_project_report.md  pdr_demo_description_and_script.md  technical_appendix.md
docs/figures/: fig1_system_block.drawio  fig2_sector_geometry.drawio
evaluation/: README.md  TESTING.md  run_eval.py
evaluation/results/: campus_baseline_run_v2.json  campus_baseline_v2_report.md  campus_enhanced_run_v2.json  campus_enhanced_v2_report.md  pilot_baseline_summary.md  pilot_enhanced_summary.md
evaluation/sample_runs/: pilot_baseline.json  pilot_enhanced.json
evaluation/scenarios/: cs5330_navigation_core.json
include/: brain_client.h  brain_pane.h  free_space.h  gl_textures.h  obstacle.h  realsense_stream.h  sonar.h  topdown.h
js/: app.js  audio-streamer.js  camera.js  gemini-client.js
js/cv/: enhancement-pipeline.js  frame-utils.js
js/evaluation/: session-logger.js
js/worklets/: audio-processor.js
opalite-webapp/: HACKATHON_CHECKLIST.md  README.md  app.yaml  config.example.js  deploy.sh  index.html  manifest.json
opalite-webapp/backend/: package-lock.json  package.json  server.js
opalite-webapp/backend/adapters/: fallback-adapter.js  litertlm-adapter.js  llamacpp-vision.js  ollama-vision.js
opalite-webapp/css/: styles.css
opalite-webapp/js/: app.js  audio-recorder.js  audio-streamer.js  local-client.js
opalite-webapp/js/cv/: monodepth2-client.js  places365-client.js  retinanet-client.js
src/: CMakeLists.txt  brain_client.cpp  brain_pane.cpp  free_space.cpp  gl_textures.cpp  main.cpp  obstacle.cpp  realsense_stream.cpp  sonar.cpp  topdown.cpp
submission/: README.md
